# Thermoneutronics

./: .gitignore  CMakeLists.txt  README.md  README.txt
config/: config.txt  config1.txt  config17.txt  config2.txt
src/: boundary.h  config.cpp  config.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  scheme.cpp  scheme.h  solver.cpp  solver.h  test_modes.cpp  test_modes.h
